# REST-API-update-2

./: pyproject.toml
src/: .gitignore  main.py
src/conf/: config.py
src/contacts/: contact.py  user.py
src/database/: database.py
src/migration/: env.py
src/migration/versions/: 51acb58acf74_init.py  f0cfbe3d89b2_add_roles.py
src/models/: model.py
src/repository/: contact.py  user.py
src/routers/: auth.py  contact.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: verify_email.html
